<resources>
    <string name="app_name">NUMAD21Fa_JeannilleHiciano</string>
    <string name="about_jeannille"> jeannille Hiciano, hiciano.j@northeastern.edu</string>
    <string name="about_me">About Me</string>
    <string name="clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="link_collector">Link Collector</string>
    <string name="link_item">Link Item Placeholder</string>
    <string name="add_button">Add New Link</string>
    <string name="location_button">Get Location</string>
    <string name="longitude">Longitude</string>
    <string name="templat">tempLat</string>
    <string name="templong">tempLong</string>
    <string name="lattitude">Latitude:</string>
    <string name="denied_permissions">Error - no permissions to get long/late,.</string>
    <string name="webServiceButton">Web Service</string>
    <string name="activityWebServiceText">Have reached the Web Service Activity</string>
    <string name = "launchWebView"> Launch Web View pg.</string>
</resources>